TestSuite/errors/err0249.pas
begin
  match 1 with
  
  end;
end.